# python-gtk-pygobject

./: .gitignore  .pdm-python  CNAME  LICENSE  Pipfile  README-pt-br.md  README.md  README.pt-br.md  _config.yml  build-msi.sh  deletar.py  get_widgets_info_gtk_3.py  get_widgets_info_gtk_4.py  get_widgets_info_gtk_4_libadwaita.py  pyproject.toml  pyproject.toml.old  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: pages.yml  windows.yml
_scripts/: _tools.py  blp_to_ui.py  build_docs.py  convert_blp_to_ui.py  export_requirements.py  get_widget_info.py  settings.py  setup.py
_scripts/data/: AdwToolbarView.md  GtkButton.md
_scripts/templates/: widget.md
_tools/: get_widget_info.py
_tools/templates/: widget.txt
docs/: build_doc.py  creating-main-window.md  cxfreeze-linux.md  cxfreeze-windows.md  gkt3-libhandy-widgets.md  gtk-icon-browser.md  gtk-inspector.md  gtk3-index.md  gtk3-libhandy-index.md  gtk3-libhandy-widgets.md  gtk3-widgets.md  gtk4-libadwaita-widgets.md  gtk4-widgets-libadwaita.md  gtk4-widgets.md  gtk4-windgets.md  gtk_enums.md  handy-widgets.md  install-gnome-builder.md  install-gnome-glade.md  install-msys2-windows.md  install-purism-libhandy.md  install-pygi-windows.md  install-python.md  phosh.md  set-dev-env.md  style-add-class.md  style-add-name.md  style-dark-mode.md  style-load-css-file.md  vertopal.com_README-pt-br.rst
docs/data/: CNAME  requirements-doc.txt
docs/gtk-3-widgets-info/: GtkActionBar.md  GtkApplicationWindow.md  GtkBox.md  GtkButton.md  GtkButtonBox.md  GtkCalendar.md  GtkCheckButton.md  GtkDialog.md  GtkEntry.md  GtkEventBox.md  GtkFileChooserDialog.md  GtkFixed.md  GtkFlowBox.md  GtkGrid.md  GtkHeaderBar.md  GtkImage.md  GtkInfoBar.md  GtkLayout.md  GtkLinkButton.md  GtkListBox.md  GtkMenu.md  GtkMenuBar.md  GtkMenuButton.md  GtkMessageDialog.md  GtkNotebook.md  GtkOverlay.md  GtkPaned.md  GtkPopover.md  GtkRadioButton.md  GtkRevealer.md  GtkSearchBar.md  GtkSearchEntry.md  GtkSeparator.md  GtkSpinner.md  GtkStackSidebar.md  GtkStackSwitcher.md  GtkStatusbar.md  GtkSwitch.md  GtkToggleButton.md  GtkToolbar.md  (+3 more)
docs/gtk-4/: GtkButton.md
docs/source/: conf.py  contribute.rst  gtk-4-blueprint.rst  gtk-4-libadwaita-style-class.rst  gtk-4-libadwaita-widgets.rst  gtk-4-widgets.rst  gtk-4.rst  gtk-about.rst  gtk-widgets.rst  index.rst  libadwaita-about.rst  libadwaita-style-class.rst  libadwaita-widgets.rst  tips.rst  tutorials.rst
docs/widgets-info/: AdwAboutWindow.md  AdwActionRow.md  AdwAvatar.md  AdwBanner.md  AdwButtonContent.md  AdwCarousel.md  AdwCarouselIndicatorDots.md  AdwCarouselIndicatorLines.md  AdwClamp.md  AdwComboRow.md  AdwEntryRow.md  AdwExpanderRow.md  AdwMessageDialog.md  AdwNavigationSplitView.md  AdwPasswordEntryRow.md  AdwSplitButton.md  (+31 more)
tools/: get_widgets_info_gtk_3.py  get_widgets_info_gtk_4.py  get_widgets_info_gtk_4_libadwaita.py  images_to_webp.py  make_include_files.py
(+2144 files in other folders)
