[tool.poetry]
name = "python-gtk-pygobject"
version = "0.1.0"
description = "Criando interfaces gráficas com Python (PyGObject) e GTK."
authors = ["Renato Cruz <natorsc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygobject = "^3.48.2"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.4.10"
pygobject-stubs = "^2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
export = 'poetry export --without-hashes -o requirements.txt'
format = 'ruff check . --fix && ruff format .'
lint = 'ruff check . && ruff check . --diff'
blp_format = 'blueprint-compiler format -f -n .'
