[tool.poetry]
name = "python-gtk-pygobject"
version = "0.1.0"
description = "Criando interfaces gráficas com Python (PyGObject) e GTK."
authors = ["Renato Cruz <natorsc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pygobject = "^3.50.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.6.7"
pygobject-stubs = "^2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
# extend-exclude = ['']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
export = 'poetry export --without-hashes -o requirements.txt'
export_dev = 'poetry export --without-hashes --with dev -o requirements-dev.txt'
format = 'ruff format .'
lint = 'ruff check . --select I --fix && ruff format .'
blp = 'blueprint-compiler format -f -n .'
